--- a/libs/auth/components/src/lib/login/login.page.html
+++ b/libs/auth/components/src/lib/login/login.page.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<div
+  id="login-container"
+  class="vh-100 d-flex align-items-center justify-content-center row"
+>
+  <div class="col-md-4 d-flex flex-column">
+    <form action="" class="card shadow">
+      <div class="card-body">
+        <h2>Login</h2>
+        <div class="form-group">
+          <label for="username"></label>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            class="form-control form-control-lg"
+            placeholder="Username"
+            aria-describedby="helpId"
+          />
+          <small id="helpId" class="text-muted">Help text</small>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            class="form-control form-control-lg"
+            name="password"
+            id="password"
+            placeholder=""
+          />
+        </div>
+      </div>
+      <div class="card-footer d-grid p-3">
+        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+      </div>
+    </form>
+  </div>
+</div>
