--- a/libs/auth/components/src/lib/login/login.page.html
+++ b/libs/auth/components/src/lib/login/login.page.html
@@ -3,6 +3,11 @@
   class="vh-100 d-flex align-items-center justify-content-center row"
 >
   <div class="col-md-4 d-flex flex-column">
+    <img
+      src="assets/logos/skooltrak-logo.svg"
+      class="img-fluid logo align-self-center"
+      alt="Skooltrak"
+    />
     <form [formGroup]="form" (ngSubmit)="signIn()">
       <skooltrak-card shadow="normal">
         <div body>
