--- a/libs/auth/components/src/lib/login/login.page.scss
+++ b/libs/auth/components/src/lib/login/login.page.scss
@@ -1,5 +1,12 @@
 #login-container {
+  margin-top: -2rem;
   background-image: linear-gradient(to right, #fc82c8, #539ec5, #91eae4);
   background-size: 100% 60vh;
   background-repeat: no-repeat;
+}
+
+.logo {
+  max-width: 35%;
+  margin-bottom: -50px;
+  z-index: 999;
 }
