--- a/libs/ui/src/lib/components/dynamic-form/dynamic-form.component.html
+++ b/libs/ui/src/lib/components/dynamic-form/dynamic-form.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="modal-body">
     <ng-container *ngFor="let field of fields">
-      <div class="form-group row" *ngIf="!field.readonly">
+      <div class="form-group row mb-2" *ngIf="!field.readonly">
         <label for="{{ field.name }}" class="col-sm-4 col-form-label"
           >{{ field.title }}
           <small *ngIf="!field.required" class="optional-label">Opcional</small>
@@ -140,9 +140,18 @@
     </ng-container>
   </div>
   <div class="modal-footer">
-    <button ngbAutofocus type="submit" class="btn btn-primary">
+    <skooltrak-button
+      theme="danger"
+      variant="clear"
+      (click)="modal.dismiss('close button')"
+      class="me-2"
+    >
+      <i class="bi bi-x-circle" aria-hidden="true"></i>
+      Cancelar
+    </skooltrak-button>
+    <skooltrak-button ngbAutofocus type="submit" theme="primary">
       <i class="bi bi-save" aria-hidden="true"></i>
       Guardar
-    </button>
+    </skooltrak-button>
   </div>
 </form>
