--- a/apps/admin/src/app/dashboard/subjects/subjects.component.html
+++ b/apps/admin/src/app/dashboard/subjects/subjects.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <h2 class="page-title">Materias</h2>
-  <skooltrak-card shadow="normal">
+  <skooltrak-card>
     <div body>
+      <h2 class="page-title">Materias</h2>
       <skooltrak-table
         [options]="table"
         [items]="subjects$ | async"
