--- a/apps/admin/src/app/dashboard/dashboard.component.html
+++ b/apps/admin/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row flex-nowrap">
-    <nav class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-light bg-gradient">
+    <nav class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-white bg-gradient">
       <div
         class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 min-vh-100"
       >
@@ -177,6 +177,11 @@
               >
             </li>
             <li>
+              <a class="dropdown-item" [routerLink]="['messages']"
+                ><i class="me-2 bi-envelope text-primary"></i>Messages</a
+              >
+            </li>
+            <li>
               <a class="dropdown-item" [routerLink]="['profile']"
                 ><i class="me-2 bi-person-circle text-success"></i>Profile</a
               >
@@ -193,7 +198,7 @@
         </div>
       </div>
     </nav>
-    <main class="col py-3">
+    <main class="col py-3 bg-light">
       <router-outlet></router-outlet>
     </main>
   </div>
