--- a/apps/admin/src/styles.scss
+++ b/apps/admin/src/styles.scss
@@ -4,6 +4,10 @@
 @import 'bootstrap/scss/functions';
 $font-family-sans-serif: 'Inter';
 $border-width: 0;
+$border-radius: 0.5rem;
+$border-radius-sm: 0.3rem;
+$border-radius-lg: 0.7rem;
+$border-radius-pill: 50rem;
 
 @import '~bootstrap/scss/variables';
 $input-bg: $gray-100;
