(feat)Messages store changes

--- a/libs/auth/components/src/lib/login/login.page.html
+++ b/libs/auth/components/src/lib/login/login.page.html
@@ -19,6 +19,7 @@
               name="username"
               id="username"
               formControlName="username"
+              autocomplete="username"
               class="form-control form-control-lg"
               placeholder="Nombre de usuario"
               aria-describedby="helpId"
@@ -34,6 +35,7 @@
               class="form-control form-control-lg"
               name="password"
               id="password"
+              autocomplete="current-password"
               formControlName="password"
               placeholder="******"
             />
